# SocialPlatformConsoleApp

ProiectSDA/: CMakeLists.txt  main.cpp  readme.txt
ProiectSDA/Domain/: Event.cpp  Event.h  Friendship.cpp  Friendship.h  List.h  Message.cpp  Message.h  Multimap.h  Node.h  User.cpp  User.h
ProiectSDA/Repository/: EventRepository.cpp  EventRepository.h  FriendshipRepository.cpp  FriendshipRepository.h  MessageRepository.cpp  MessageRepository.h  UserRepository.cpp  UserRepository.h
ProiectSDA/Service/: EventService.cpp  EventService.h  FriendshipService.cpp  FriendshipService.h  MessageService.cpp  MessageService.h  UserService.cpp  UserService.h
ProiectSDA/Tests/: Tests.cpp  Tests.h
ProiectSDA/UserInterface/: UI.cpp  UI.h
